--- a/digit_memory.kv
+++ b/digit_memory.kv
@@ -6,7 +6,7 @@
 
         TextInput:
             id: words_output
-            text: "0"
+            text: "-"
             font_size: 20
             size_hint: (1, 1)
 
